# fann

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  config.in  configure  configure.in  fann.pc.in  fann.spec.in  mkinstalldirs
BorlandC++Builder6.0/: all.bpg  cascade_train.bpr  libfann.bpr  momentums.bpr  mushroom.bpr  robot.bpr  simple_test.bpr  simple_test.res  simple_train.bpr  steepness_train.bpr  xor_test.bpr  xor_train.bpr
MicrosoftVisualC++.Net/: all.ncb  all.sln  libfann.vcproj  simple_test.vcproj  simple_train.vcproj  steepness_train.vcproj  xor_test.vcproj  xor_train.vcproj
MicrosoftVisualC++6.0/: README.txt  all.dsw  libfann.dsp  simple_test.dsp  simple_train.dsp  steepness_train.dsp  xor_test.dsp  xor_train.dsp
MicrosoftWindowsDll/: makefile  readme.txt  win32.ncb  win32.sln  windll.vcproj
MicrosoftWindowsDll/examples/: examples.ncb  examples.sln  simple_test.vcproj  simple_train.vcproj  xor_test.vcproj  xor_train.vcproj
benchmarks/: .cvsignore  Makefile  README  benchmark.sh  ctimer.h  gnuplot  gnuplot.pl  parity.c  performance.cc  quality.cc  quality_fixed.c  shuffle.c  summary.txt  summary2tex.pl  two-spirals.c
debian/: changelog  control  copyright  docs  libfann2-dev.examples  libfann2-py.install  rules
doc/: advancedusage.txt  fixedpointusage.txt  gettingstarted.txt  installation.txt  theory.txt
examples/: cascade_train.c  robot.c  xor_train.c
python/: INSTALL  Makefile  README  build.bat  setup.py
python/examples/: cascade_train.py  mushroom.py  simple_train.py
src/: Makefile.am  Makefile.in
(+3 files in other folders)
